infra/version-checker/resources/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: http
  namespace: version-checker
spec:
  parentRefs:
    - name: north-south
      namespace: gateway
      sectionName: http
  hostnames:
    - version.minikube
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: https
  namespace: version-checker
spec:
  parentRefs:
    - name: north-south
      namespace: gateway
      sectionName: https
  hostnames:
    - version.minikube
  rules:
    - backendRefs:
        - name: version-checker
          port: 8080
